@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-24T08:34:07Z",
+  "timestamp" : "2022-10-24T16:29:57Z",
   "count_outdated" : 594,
   "uniques_outdated" : 340,
-  "count" : 642,
+  "count" : 641,
   "uniques" : 367,
   "clones" : [
     {
       "timestamp": "2022-10-10T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
