@@ -1,10 +1,10 @@
 {
-  "count": 48,
+  "count": 47,
   "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-10-10T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
