@@ -1,3 +1,11 @@
+2022-10-24T16:29:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3314458725 # 965
+* notice: last 14d: unq all: 13 47
+* notice: prev accum: outdated-unq outdated-all / unq all: 340 594 / 367 642
+* notice: next accum: outdated-unq outdated-all / unq all: 340 594 / 367 641
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-10-10]
+
 2022-10-24T08:34:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3311200280 # 964
 * notice: last 14d: unq all: 13 48
